k8s/mediaserver/karakeep/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: karakeep-web
spec:
  selector:
    app: karakeep-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
