k8s/mediaserver/karakeep/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karakeep-web-ingress
  namespace: mediaserver
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: nginx
  rules:
    - host: "karakeep.enricoruggieri.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: karakeep-web
                port:
                  number: 3000
  tls:
    - hosts:
        - karakeep.enricoruggieri.com
      secretName: karakeep-cert-tls
